# paper-normalizer

./: Cargo.toml  LICENSE  README.md
entities/: Cargo.toml
entities/src/: lib.rs
prompter/: Cargo.toml
prompter/src/: main.rs
src/: main.rs
src/modules/: base.rs  ieee.rs  mod.rs  scopus.rs  springer.rs
